technet-prod/server-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: server
spec:
  template:
    spec:
      containers:
      - name: technet
