technet-prod/technet-doc-volume-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamdocs-doc
spec:
  template:
    spec:
      nodeSelector:
        technet-doc: prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-gateway-11-doc
spec:
  template:
    spec:
      nodeSelector:
        technet-doc: prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-gateway-10-doc
spec:
  template:
    spec:
      nodeSelector:
        technet-doc: prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: textsense-doc
spec:
  template:
    spec:
      nodeSelector:
        technet-doc: prod
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: server
spec:
  template:
    spec:
      nodeSelector:
        technet-doc: prod
