technet-prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technet
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~ /view/docs/pdf-gateway/(.*) {
        return 302 /view/docs/pdf-gateway-10/$1;
      }

      location ~ /guide-assets/pdf-gateway/(.*) {
        return 302 /guide-assets/pdf-gateway-10/$1;
      }

      location ~ /guide-assets/streamdocs-vu/(.*) {
        rewrite ^/guide-assets/streamdocs-vu/(.*)$ /guide-assets/streamdocs/$1;
      }
spec:
  tls:
  - hosts:
    - technet.epapyrus.com
    secretName: technet.epapyrus.com-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technet-doc
spec:
  tls:
  - hosts:
    - technet.epapyrus.com
    secretName: technet.epapyrus.com-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamdocs-tutorial
spec:
  tls:
  - hosts:
    - technet.epapyrus.com
    secretName: technet.epapyrus.com-tls
